// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectively.Type Array 1`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".every()",
  },
]
`;

exports[`selectively.Type Array 2`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".every()",
  },
]
`;

exports[`selectively.Type Boolean 1`] = `
Boolean {
  "class": "boolean",
}
`;

exports[`selectively.Type Boolean 2`] = `
Array [
  Object {
    "cursor": 5,
    "value": ".true",
  },
]
`;

exports[`selectively.Type Boolean 3`] = `
Array [
  Object {
    "cursor": 5,
    "value": ".true",
  },
  Object {
    "cursor": 6,
    "value": ".false",
  },
]
`;

exports[`selectively.Type Object 1`] = `
TObject {
  "class": "object",
  "completions": Array [
    Object {
      "value": "name",
    },
  ],
  "properties": Object {
    "name": String {
      "class": "string",
      "completion": Object {
        "value": "",
      },
      "value": "",
    },
  },
}
`;

exports[`selectively.Type Tokenizer 1`] = `
Array [
  Object {
    "value": ".",
  },
  Object {
    "value": "object",
  },
  Object {
    "value": ".",
  },
  Object {
    "value": "has",
  },
  Object {
    "value": "(",
  },
  Object {
    "value": ")",
  },
]
`;

exports[`selectively.Type Tokenizer 2`] = `
Array [
  Object {
    "value": ".",
  },
  Object {
    "value": "*",
  },
  Object {
    "value": "*",
  },
]
`;

exports[`selectively.Type complete 1`] = `
Array [
  Object {
    "cursor": 3,
    "value": ".id",
  },
  Object {
    "cursor": 7,
    "value": ".status",
  },
  Object {
    "cursor": 5,
    "value": ".has()",
  },
]
`;

exports[`selectively.Type complete 2`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".has(id)",
  },
]
`;

exports[`selectively.Type complete 3`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".has(id)",
  },
  Object {
    "cursor": 11,
    "value": ".has(status)",
  },
]
`;

exports[`selectively.Type complete 4`] = `
Array [
  Object {
    "cursor": 5,
    "value": ".has()",
  },
]
`;

exports[`selectively.Type complete 5`] = `
Array [
  Object {
    "cursor": 5,
    "value": ".has()",
  },
]
`;

exports[`selectively.Type complete 6`] = `
Array [
  Object {
    "cursor": 4,
    "value": ".id.",
  },
]
`;

exports[`selectively.Type complete 7`] = `
Array [
  Object {
    "cursor": 9,
    "value": ".id.first",
  },
  Object {
    "cursor": 10,
    "value": ".id.second",
  },
  Object {
    "cursor": 8,
    "value": ".id.has()",
  },
]
`;

exports[`selectively.Type complete 8`] = `
Array [
  Object {
    "cursor": 13,
    "value": ".id.has(first)",
  },
  Object {
    "cursor": 14,
    "value": ".id.has(second)",
  },
]
`;

exports[`selectively.Type complete 9`] = `
Array [
  Object {
    "cursor": 9,
    "value": ".id.first",
  },
]
`;

exports[`selectively.Type complete 10`] = `
Array [
  Object {
    "cursor": 10,
    "value": ".id.first:",
  },
  Object {
    "cursor": 10,
    "value": ".id.first>",
  },
  Object {
    "cursor": 11,
    "value": ".id.first>=",
  },
  Object {
    "cursor": 10,
    "value": ".id.first<",
  },
  Object {
    "cursor": 11,
    "value": ".id.first<=",
  },
]
`;

exports[`selectively.Type complete 11`] = `
Array [
  Object {
    "cursor": 14,
    "value": ".id.first<TODO",
  },
  Object {
    "cursor": 11,
    "value": ".id.first<=",
  },
]
`;

exports[`selectively.Type complete 12`] = `
Array [
  Object {
    "cursor": 11,
    "value": ".id.first:*",
  },
  Object {
    "cursor": 11,
    "value": ".id.first:**",
  },
]
`;

exports[`selectively.Type complete 13`] = `
Array [
  Object {
    "cursor": 15,
    "value": ".id.first:*test",
  },
  Object {
    "cursor": 12,
    "value": ".id.first:**",
  },
]
`;

exports[`selectively.Type complete 14`] = `
Array [
  Object {
    "cursor": 15,
    "value": ".id.first:*test*",
  },
]
`;

exports[`selectively.Type complete 15`] = `
Array [
  Object {
    "cursor": 14,
    "value": ".id.first:test*",
  },
]
`;

exports[`selectively.Type complete 16`] = `Array []`;

exports[`selectively.Type complete 17`] = `
Array [
  Object {
    "cursor": 15,
    "value": ".id.first:*test*",
  },
]
`;

exports[`selectively.Type complete 18`] = `Array []`;

exports[`selectively.Type complete 19`] = `
Array [
  Object {
    "cursor": 15,
    "value": ".id.first:*test",
  },
]
`;

exports[`selectively.Type complete 20`] = `Array []`;

exports[`selectively.Type complete 21`] = `
Array [
  Object {
    "cursor": 20,
    "value": ".status.statusArray.",
  },
]
`;

exports[`selectively.Type complete 22`] = `
Array [
  Object {
    "cursor": 26,
    "value": ".status.statusArray.every()",
  },
]
`;

exports[`selectively.Type complete 23`] = `
Array [
  Object {
    "cursor": 26,
    "value": ".status.statusArray.every()",
  },
]
`;

exports[`selectively.Type complete 24`] = `
Array [
  Object {
    "cursor": 26,
    "value": ".status.statusArray.every()",
  },
]
`;

exports[`selectively.Type complete 25`] = `
Array [
  Object {
    "cursor": 30,
    "value": ".status.statusArray.every(TODO)",
  },
]
`;

exports[`selectively.Type complete 26`] = `31`;
